Organized the css into their own files corresponding to each section of the webpage. Fixed the section headers from being cut off from the navbar

--- a/static/style.css
+++ b/static/style.css
@@ -16,40 +16,13 @@ h2 {
 
 section {
     margin-top: 100px;
+    padding-top: 80px;
     margin-bottom: 50px;
 }
 
 img {
     display: block;
     border-radius: 10px;
-}
-
-#card-container {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    gap: 75px;
-    justify-content: center;
-    padding-left: 10%;
-    padding-right: 10%;
-}
-
-@media (max-width: 640px) {
-    #card-container {
-        grid-template-columns: auto;
-    }
-}
-
-.eboard-card {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
-    max-width: 300px;
-    border-radius: 15px;
-    background-color: rgb(131, 206, 226);
-    padding: 10px;
-    min-height: max-content;
 }
 
 h3 {
@@ -61,323 +34,4 @@ h3 {
     display: flex;
     flex-direction: column;
     align-items: center;
-}
-
-#acmlogo {
-    width: 150px;
-    height: auto;
-    padding: 10px;
-    margin-left: 10px;
-    margin-right: auto;
-}
-
-nav {
-    width: 100%;
-    height: auto;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    border-bottom-left-radius: 25px;
-    border-bottom-right-radius: 25px;
-    position: fixed;
-    top: 0;
-    left: 0; 
-    z-index: 10;
-    padding: 0;
-    margin: 0;
-    background-color: rgb(1, 130,172);
-}
-
-ul {
-    list-style: none;
-    display: flex;
-    flex-direction: row;
-    gap: 50px;
-    margin-right: 30px;
-}
-
-.name {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    font-size: larger;
-}
-
-.position {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    font-size: xx-large;
-    text-decoration: underline;
-}
-
-.roleandname {
-    display: flex;
-    flex-direction: column;
-}
-
-.photos {
-    display: flex;
-    justify-self: center;
-    align-items: center;
-    height: 60%;
-    padding-top: 20px;
-}
-
-.info {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 40%;
-}
-
-button {
-    display: inline-flex;
-    width: 45px;
-    height: 45px;
-    border-radius: 50%;
-    align-items: center;
-    justify-content: center;
-    font-size: 24px;
-    cursor: pointer;
-    border: none;
-    transition: background 2ms;
-}
-
-#github {
-    background-color: #d0d7de;
-}
-
-#github:hover {
-    background-color: #8c959f;
-}
-
-#linkedin {
-    background-color: #68C7EC;
-}
-
-#linkedin:hover {
-    background-color: #34B3E4;
-}
-
-#materials {
-    width: 40px;
-    height: 40px;
-    background-color: rgb(182, 180, 180);
-}
-
-#materials:hover {
-    background-color: rgb(139, 138, 138);
-}
-
-#calendar {
-    width: 40px;
-    height: 40px;
-    background-color: rgb(182, 180, 180);
-}
-
-#calendar:hover {
-    background-color: rgb(139, 138, 138);
-}
-
-.social-links {
-    display: flex;
-    flex-direction: row;
-    column-gap: 15px;
-}
-
-#eboard-photo {
-    width: 250px;
-    height: auto;
-    border: 1px solid black;
-}
-
-.event-card {
-    display: flex;
-    background-color: rgb(150, 172, 170);
-    border-radius: 25px;
-    border: none;
-    text-decoration: none;
-    padding: 5px;
-    position: relative;
-    width: 600px;
-    height: 200px;
-}
-
-#events {
-    display: flex;
-    flex-direction: column;
-}
-
-.events {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    gap: 50px;
-    justify-content: center;
-    padding-left: 10%;
-    padding-right: 10%;
-}
-
-.event-buttons {
-    display: flex;
-    flex-direction: row;
-    gap: 10px;
-    position: absolute;
-    margin: 0;
-    padding: 0;
-    top: 5px;
-    right: 10px;
-}
-
-@media (max-width: 450px) {
-    #events div {
-        grid-template-columns: auto;
-    }
-}
-
-.title {
-    display: flex;
-    flex-direction: column;
-}
-
-.event-title {
-    font-size: x-large;
-    position: absolute;
-    margin: 0;
-    padding: 0;
-    top: 5px;
-    left: 15px; 
-}
-
-.event-subtitle {
-    font-size: medium;
-    font-style: italic;
-    position: absolute;
-    margin: 0;
-    padding: 0;
-    top: 35px;
-    left: 15px;
-}
-
-.event-info {
-    position: absolute;
-    display: flex;
-    flex-direction: row;
-    column-gap: 10px;
-    margin: 0;
-    padding: 0;
-    left: 10px;
-    top: 35px;
-}
-
-.event-info.has-subtitle {
-    top: 55px;
-}
-
-.description {
-    display: flex;
-    flex-direction: column;
-    position: relative;
-    top: 35px;
-    left: 10px;
-    right: 100px;
-    padding-top: 10px;
-    height: fit-content;
-}
-
-.datetimelocal {
-    display: flex;
-    align-items: center;
-    column-gap: 5px;
-    row-gap: 2px;
-    margin: 0 5px;
-    padding: 4px 0;
-}
-
-.resources{
-    position: absolute;
-    display: flex;
-    align-items: center;
-    column-gap: 2px;
-    padding: 0;
-    margin: 0;   
-    right: 10px;
-    top: 10px; 
-    text-decoration: underline;
-}
-
-.project-container {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    gap: 75px;
-    justify-content: center;
-    padding-left: 10%;
-    padding-right: 10%;
-}
-
-.project-card {
-    display: flex;
-    align-items: center;
-    width: 100%;
-    max-width: 600px;
-    border-radius: 15px;
-    background-color: rgb(131, 206, 226);
-    height: 100%;
-    padding-right: 20px;
-    gap: 25px;
-}
-
-#project-photo {
-    width: 300px;
-    height: auto;
-}
-
-.project-name {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    font-size: xx-large;
-    text-decoration: underline;
-    margin: 0;
-    padding-top: 15px;
-}
-
-#contributor-header {
-    display: flex;
-    font-size: larger;
-    text-decoration: underline;
-    justify-content: center;
-}
-
-.contributors {
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.project-info {
-    display: flex;
-    flex-direction: column;
-    min-height: 350px;
-    row-gap: 40px;
-    padding: 0 5px;
-}
-
-.project-description {
-    display: flex;
-    flex-direction: column;
-}
-
-#github-project {
-    width: 100%;
-    height: 100%;
-    column-gap: 10px;
-    border-radius: 25px;
-    padding: 3px 0;
-}
-
-#github-project:hover {
-    background-color: #8c959f;
 }
